# mastodon-analyzer

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  analyzer_start_celery.py  analyzer_tasks_header.py  docker-compose.yaml  gunicorn_config.py  main.py  pyproject.toml  settings.py
cache/: redis.py  serialization.py
db/: db_setup.py  session_manager.py
db/models/: account_model.py  base.py  instance_model.py  status_model.py  statuses_to_check_model.py  trend_model.py
db/schemas/: account_schema.py  common_schema.py  instance_schema.py  suspicious_status_schema.py  trend_schema.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: index.scss
frontend/src/pages/About/: About.jsx
frontend/src/pages/Home/: Home.jsx  Home.module.css
frontend/src/pages/Home/components/: current-trends-table.js  intances-table.js  suspicious-accounts-table.js  suspicious-statuses-table.js  suspicious-trends-table.js
migrations/: env.py
migrations/versions/: 2024-11-18-13-25-58_07fb4c089138_initial_schema.py
nginx/conf/: nginx.conf
nginx/conf.d/: api.fediversechecker.org  mastodon.igloomarket.xyz  mastodon.igloomarket.xyz.conf
rabbitmq/: rabbitmq.conf
routers/: accounts.py  instances.py  statuses.py  trends.py
services/: account_service.py  instance_service.py  listener.py  llm_provider.py  mastodon_service.py  mastodon_social_client.py  status_service.py  trends_service.py
utils/: errors.py  helpers.py  logging.py  pagination.py  similarity_checker.py  utils.py
